# PromptEasy

./: .gitignore  main.py  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/api/: pyproject.toml
apps/api/app/prompt_engine/shared/: enums.py
apps/api/app/schemas/: __init__.py  base.py  prompt_analysis.py  prompt_request.py
apps/web/: pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx
